fix bugs in readme and visualization

--- a/console.ipynb
+++ b/console.ipynb
@@ -2,24 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "DLL load failed while importing _multiarray_umath: 找不到指定的模块。",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;31mImportError\u001b[0m: DLL load failed while importing _multiarray_umath: 找不到指定的模块。"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# === Environment Setup ===\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
+    "#%load_ext autoreload\n",
+    "#%autoreload 2\n",
     "%matplotlib inline\n",
     "\n",
     "import ipywidgets as widgets\n",
