--- a/console.ipynb
+++ b/console.ipynb
@@ -2,6 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Run in Colab ===\n",
+    "import os\n",
+    "!git clone https://github.com/jruedai08/Eaton-Eslava-Jinkins-Krizan-Tybout-2021-Replication.git\n",
+    "\n",
+    "# switch to the cloned directory\n",
+    "repo_name = 'Eaton-Eslava-Jinkins-Krizan-Tybout-2021-Replication'\n",
+    "if os.path.exists(repo_name):\n",
+    "    os.chdir(repo_name)\n",
+    "    print(f\"✅ Successfully switch to the cloned directory: {os.getcwd()}\")\n",
+    "    print(\"Now you can run the main.py file and files in /src\")\n",
+    "else:\n",
+    "    print(\"❌ Error: Cloned directory not found.\")\n",
+    "\n",
+    "# Check the contents of the current directory\n",
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
